feat: code review mcp (#14)
* feat: code-review mcp

* doc: readme

---------
